<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:orientation="vertical">


            <Switch
                android:id="@+id/switch9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/_9"
                android:textOff="@string/swOFF"
                android:textOn="@string/swON" />

            <Switch
                android:id="@+id/switch10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/_10"
                android:textOff="@string/swOFF"
                android:textOn="@string/swON" />

            <Switch
                android:id="@+id/switch11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/_11"
                android:textOff="@string/swOFF"
                android:textOn="@string/swON" />

            <Switch
                android:id="@+id/switch12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/_12"
                android:textOff="@string/swOFF"
                android:textOn="@string/swON" />


        </LinearLayout>

    </LinearLayout>


    <TableLayout
        android:id="@+id/switchgroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="false"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="30dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="TODO"
                android:src="@drawable/albero" />

            <Switch
                android:id="@+id/switch1"
                android:layout_height="wrap_content"


                android:layout_marginEnd="70dp"
                android:checked="false"
                android:text="@string/_1"
                android:textOff="@string/swOFF"
                android:textOn="@string/swON" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="TODO"
                android:src="@drawable/casa" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/_2"
                android:textOff="@string/swOFF"
                android:textOn="@string/swON" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="TODO"
                android:src="@drawable/fuoco" />

            <Switch
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginEnd="70dp"
                android:text="@string/_3"
                android:textOff="@string/swOFF"
                android:textOn="@string/swON" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="TODO"
                android:src="@drawable/casa" />

            <Switch
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/_4"
                android:textOff="@string/swOFF"
                android:textOn="@string/swON" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="TODO"
                android:src="@drawable/water" />

            <Switch
                android:id="@+id/switch5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginRight="70dp"
                android:text="@string/_5"
                android:textOff="@string/swOFF"
                android:textOn="@string/swON" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="TODO"
                android:src="@drawable/sky" />

            <Switch
                android:id="@+id/switch6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/_6"
                android:textOff="@string/swOFF"
                android:textOn="@string/swON" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="TODO"
                android:src="@drawable/fog" />

            <Switch
                android:id="@+id/switch7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginRight="70dp"
                android:text="@string/_7"
                android:textOff="@string/swOFF"
                android:textOn="@string/swON" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="TODO"
                android:src="@drawable/neon" />

            <Switch
                android:id="@+id/switch8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/_8"
                android:textOff="@string/swOFF"
                android:textOn="@string/swON" />
        </TableRow>

    </TableLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="true">

        <ImageButton
            android:id="@+id/AudioP"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/play" />


    </RelativeLayout>

    <ImageButton
        android:id="@+id/imgbut_OFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@android:drawable/presence_busy" />

    <SeekBar
        android:id="@+id/volbar"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="133dp"
        android:layout_marginStart="32dp" />


</RelativeLayout>
